add: dialogs :rocket:

--- a/app/src/main/res/layout/dialog_continue_routine.xml
+++ b/app/src/main/res/layout/dialog_continue_routine.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="20dp"
-    android:background="@drawable/custom_dialog_bg">
+    android:background="@drawable/custom_dialog_bg"
+    >
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -12,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
         android:gravity="center_horizontal"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
+        app:layout_constraintBottom_toTopOf="@+id/textView9"
         app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
         app:layout_constraintStart_toStartOf="@+id/linearLayout2">
 
@@ -21,7 +23,7 @@
             style="@style/textStyleSemiBold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/are_you_sure"
+            android:text="@string/continue_your"
             android:textSize="16sp" />
 
         <TextView
@@ -30,7 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="3dp"
-            android:text="@string/dialog_logout"
+            android:text="@string/morning_routines"
             android:textAllCaps="false"
             android:textColor="@color/orange"
             android:textSize="16sp" />
@@ -51,15 +53,12 @@
         android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginTop="20dp"
         android:gravity="center"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0">
+        app:layout_constraintTop_toBottomOf="@+id/textView9">
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_no"
@@ -78,17 +77,28 @@
         <Button
             android:id="@+id/btn_yes"
             style="@style/buttonTextStyle"
-            android:layout_marginStart="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
             android:layout_weight="1"
             android:background="@drawable/custom_rounded_btn_bg"
             android:elevation="0dp"
             android:padding="6dp"
             android:text="@string/yes"
             android:textSize="12sp" />
-
-
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/continue_routine"
+        android:textColor="@color/grey"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
