--- a/app/src/main/res/layout/activity_detail_book.xml
+++ b/app/src/main/res/layout/activity_detail_book.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.detail.DetailBookActivity">
+    tools:context=".ui.detail.book_routine.DetailBookActivity">
 
     <ImageView
         android:id="@+id/iv_back"
@@ -165,12 +165,17 @@
     <TextView
         android:id="@+id/tv_description_book"
         android:layout_width="0dp"
-        android:textColor="@color/grey"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+
         android:layout_marginStart="24dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="24dp"
+        android:layout_marginBottom="20dp"
+        android:justificationMode="inter_word"
+        android:textAlignment="textEnd"
         android:text="@string/book_description"
+        android:textColor="@color/grey"
+        app:layout_constraintBottom_toTopOf="@+id/btn_finish"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_description" />
@@ -193,4 +198,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible" />
 </androidx.constraintlayout.widget.ConstraintLayout>
