--- a/app/src/main/res/layout/activity_detail_exercise.xml
+++ b/app/src/main/res/layout/activity_detail_exercise.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.detail.DetailExerciseActivity">
+    tools:context=".ui.detail.exercise_routine.DetailExerciseActivity">
 
     <ImageView
         android:id="@+id/iv_back"
