--- a/app/src/main/res/layout/activity_detail_book.xml
+++ b/app/src/main/res/layout/activity_detail_book.xml
@@ -166,14 +166,13 @@
         android:id="@+id/tv_description_book"
         android:layout_width="0dp"
         android:layout_height="0dp"
-
         android:layout_marginStart="24dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="20dp"
         android:justificationMode="inter_word"
         android:textAlignment="textEnd"
-        android:text="@string/book_description"
+        android:text=""
         android:textColor="@color/grey"
         app:layout_constraintBottom_toTopOf="@+id/btn_finish"
         app:layout_constraintEnd_toEndOf="parent"
