--- a/app/src/main/res/layout/activity_detail_exercise.xml
+++ b/app/src/main/res/layout/activity_detail_exercise.xml
@@ -118,12 +118,14 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_pages_book" />
 
     <TextView
-        android:id="@+id/tv_description_book"
+        android:id="@+id/tv_description_exercise"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="24dp"
-        android:text="@string/book_description"
+        android:justificationMode="inter_word"
+        android:textAlignment="textEnd"
+        android:text=""
         android:textColor="@color/grey"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/tv_description"
@@ -148,4 +150,15 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible" />
 </androidx.constraintlayout.widget.ConstraintLayout>
