--- a/app/src/main/res/drawable/custom_pick_routine_card_border.xml
+++ b/app/src/main/res/drawable/custom_pick_routine_card_border.xml
@@ -1,15 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_checked="true">
-        <shape>
-            <corners android:radius="6dp"/>
-            <stroke android:color="@color/orange" android:width="1dp"/>
-        </shape>
-    </item>
-    <item android:state_checked="false">
-        <shape>
-            <corners android:radius="6dp"/>
-            <stroke android:color="@color/light_grey" android:width="1dp"/>
-        </shape>
-    </item>
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <corners android:radius="6dp"/>
+    <stroke android:color="@color/orange" android:width="1dp"/>
+</shape>
