--- a/app/src/main/res/layout/activity_detail_exercise.xml
+++ b/app/src/main/res/layout/activity_detail_exercise.xml
@@ -102,20 +102,30 @@
         app:layout_constraintStart_toStartOf="@+id/tv_duration"
         app:layout_constraintTop_toBottomOf="@+id/tv_duration" />
 
-
-
-
-    <TextView
-        android:id="@+id/tv_description"
-        style="@style/textStyleMedium"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
-        android:text="@string/description"
-        android:textSize="16sp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="24dp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_finish"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_pages_book" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_description">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/tv_description_book"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:textColor="@color/grey" />
+        </LinearLayout>
+    </ScrollView>
 
     <TextView
         android:id="@+id/tv_description_exercise"
@@ -123,8 +133,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="24dp"
-        android:justificationMode="inter_word"
-        android:textAlignment="textEnd"
         android:text=""
         android:textColor="@color/grey"
         app:layout_constraintEnd_toEndOf="parent"
