--- a/app/src/main/res/layout/activity_pick_schedule.xml
+++ b/app/src/main/res/layout/activity_pick_schedule.xml
@@ -164,7 +164,7 @@
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
 
     <Button
-        android:id="@+id/btn_login"
+        android:id="@+id/btn_save"
         style="@style/buttonTextStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
