--- a/app/src/main/res/layout/item_routine_pick.xml
+++ b/app/src/main/res/layout/item_routine_pick.xml
@@ -27,15 +27,13 @@
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:layout_marginStart="24dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp"
                 android:contentDescription="@string/routine_image"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintBottom_toBottomOf="@+id/constraintLayout2"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/constraintLayout2"
                 app:srcCompat="@drawable/placeholder_book" />
 
-            <RadioButton
+            <CheckBox
                 android:id="@+id/radioButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -43,19 +41,23 @@
                 android:buttonTint="@color/orange"
                 android:minWidth="0dp"
                 android:minHeight="0dp"
+                style="@android:style/Widget.DeviceDefault.Light.CompoundButton.RadioButton"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/constraintLayout2"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
+                android:layout_marginTop="16dp"
                 android:layout_marginEnd="12dp"
-                app:layout_constraintBottom_toBottomOf="@+id/imageView"
+                android:layout_marginBottom="16dp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/radioButton"
                 app:layout_constraintStart_toEndOf="@+id/imageView"
-                app:layout_constraintTop_toTopOf="@+id/imageView">
+                app:layout_constraintTop_toTopOf="parent">
 
                 <TextView
                     android:id="@+id/textView"
