--- a/app/src/main/res/layout/activity_pick_schedule.xml
+++ b/app/src/main/res/layout/activity_pick_schedule.xml
@@ -62,7 +62,12 @@
         android:drawableEnd="@drawable/custom_calendar_icon"
         android:drawablePadding="12dp"
         android:ems="10"
+        android:focusable="false"
+        android:clickable="true"
+        android:cursorVisible="false"
+        android:focusableInTouchMode="false"
         android:hint="@string/date"
+
         android:padding="16dp"
         android:textColorHint="@color/grey"
         android:textSize="14sp"
@@ -116,7 +121,10 @@
             android:padding="16dp"
             android:textColorHint="@color/grey"
             android:textSize="14sp"
-
+            android:focusable="false"
+            android:clickable="true"
+            android:cursorVisible="false"
+            android:focusableInTouchMode="false"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -134,6 +142,10 @@
             android:hint="@string/end_time"
             android:inputType="text"
             android:padding="16dp"
+            android:focusable="false"
+            android:clickable="true"
+            android:cursorVisible="false"
+            android:focusableInTouchMode="false"
             android:textColorHint="@color/grey"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -148,6 +160,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="24dp"
         android:background="@drawable/custom_text_field_bg"
         android:drawablePadding="12dp"
@@ -160,7 +173,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="20dp"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
 
     <Button
@@ -177,8 +189,19 @@
         android:text="@string/save"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
-
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible" />
 </androidx.constraintlayout.widget.ConstraintLayout>
