--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.profile.change_password.ChangePasswordActivity">
 
     <ImageView
-        android:id="@+id/back_button"
+        android:id="@+id/iv_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
@@ -18,16 +18,16 @@
         android:contentDescription="@string/back" />
 
     <TextView
-        android:id="@+id/text_changepass"
+        android:id="@+id/textView1"
         style="@style/textStyleSemiBold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
         android:text="@string/change_password"
-        android:textColor="@color/black"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="@+id/back_button"
-        app:layout_constraintStart_toEndOf="@+id/back_button" />
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="@+id/iv_1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/iv_1" />
 
     <EditText
         android:id="@+id/old_pass"
@@ -47,7 +47,7 @@
         android:textColorHint="@color/grey"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/back_button" />
+        app:layout_constraintTop_toBottomOf="@+id/iv_1" />
 
     <EditText
         android:id="@+id/new_pass"
@@ -90,7 +90,7 @@
         app:layout_constraintTop_toBottomOf="@+id/new_pass" />
 
     <Button
-        android:id="@+id/btn_save"
+        android:id="@+id/btn_save_changepass"
         style="@style/buttonTextStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
