--- a/app/src/main/res/layout/activity_fill_exercise_pref.xml
+++ b/app/src/main/res/layout/activity_fill_exercise_pref.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".ui.fill.FillProfileActivity">
+    tools:context=".ui.fill.FillExercisePrefActivity">
 
     <ImageView
         android:id="@+id/back_button"
@@ -13,33 +12,65 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
+        android:contentDescription="@string/back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_arrow_back_24"
-        android:contentDescription="@string/back" />
+        app:srcCompat="@drawable/ic_arrow_back_24" />
+
+
+    <LinearLayout
+        android:id="@+id/container_register"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="85dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/back_button"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/tv_no_acc"
+            style="@style/textStyleSemiBold"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="6dp"
+            android:text="@string/tell_us_your"
+            android:textColor="@color/black"
+            android:textSize="32sp" />
+
+        <TextView
+            android:id="@+id/tv_register"
+            style="@style/textStyleSemiBold"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/exercise"
+            android:textColor="@color/orange"
+            android:textSize="32sp" />
+    </LinearLayout>
 
     <TextView
-        android:id="@+id/tv_fillyour"
+        android:id="@+id/tv_register2"
         style="@style/textStyleSemiBold"
-        android:layout_width="248dp"
-        android:layout_height="85dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="32dp"
-        android:text="@string/fill_your_personal_data"
-        android:textSize="31sp"
+        android:text="@string/preferences"
+        android:textColor="@color/orange"
+        android:textSize="32sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/back_button" />
+        app:layout_constraintTop_toBottomOf="@+id/container_register" />
 
-    <ImageView
-        android:id="@+id/iv_profile"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginStart="154dp"
-        android:layout_marginTop="25dp"
-        android:src="@drawable/placeholder_profile_user"
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        android:hint="@string/text_book_preferences"
+        android:textColorHint="@color/grey"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_fillyour"
-        android:contentDescription="@string/image_profile" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_register2" />
 
     <EditText
         android:id="@+id/ed_name"
@@ -47,18 +78,19 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="75dp"
         android:layout_marginEnd="24dp"
         android:background="@drawable/custom_text_field_bg"
+        android:drawableEnd="@drawable/ic_arrow_drop_down_24"
         android:drawablePadding="12dp"
         android:ems="10"
-        android:hint="@string/name"
+        android:hint="@string/favorite_exercise_category"
         android:inputType="text"
         android:padding="16dp"
         android:textColorHint="@color/grey"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_fillyour" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_register2" />
 
     <EditText
         android:id="@+id/ed_birth"
@@ -69,10 +101,9 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="24dp"
         android:background="@drawable/custom_text_field_bg"
-        android:drawableEnd="@drawable/ic_calendar_month_24"
         android:drawablePadding="12dp"
         android:ems="10"
-        android:hint="@string/date_of_birth"
+        android:hint="@string/name_your_favorite_exercise"
         android:inputType="text"
         android:padding="16dp"
         android:textColorHint="@color/grey"
@@ -90,9 +121,10 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="24dp"
         android:background="@drawable/custom_text_field_bg"
+        android:drawableEnd="@drawable/ic_arrow_drop_down_24"
         android:drawablePadding="12dp"
         android:ems="10"
-        android:hint="@string/describe_your_goals"
+        android:hint="@string/workout_duration"
         android:inputType="text"
         android:padding="16dp"
         android:textColorHint="@color/grey"
@@ -103,14 +135,14 @@
     <Button
         android:id="@+id/btn_login"
         style="@style/buttonTextStyle"
-        android:background="@drawable/custom_rounded_btn_bg"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:elevation="0dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="85dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="60dp"
+        android:background="@drawable/custom_rounded_btn_bg"
+        android:elevation="0dp"
         android:padding="8dp"
         android:text="@string/next"
         android:textSize="20sp"
