--- a/app/src/main/res/layout/activity_detail_exercise.xml
+++ b/app/src/main/res/layout/activity_detail_exercise.xml
@@ -12,10 +12,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
+        android:contentDescription="@string/back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_arrow_back_24"
-        android:contentDescription="@string/back" />
+        app:srcCompat="@drawable/ic_arrow_back_24" />
 
     <TextView
         android:id="@+id/tv_detail"
@@ -72,21 +72,21 @@
         android:layout_width="72dp"
         android:layout_height="72dp"
         android:layout_marginEnd="24dp"
+        android:contentDescription="@string/routine_name"
         app:layout_constraintBottom_toBottomOf="@+id/tv_routine_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/category_card"
-        app:srcCompat="@drawable/placeholder_book_big"
-        android:contentDescription="@string/routine_name" />
+        app:srcCompat="@drawable/placeholder_book_big" />
 
     <TextView
         android:id="@+id/tv_duration"
         style="@style/textStyleMedium"
-        android:textSize="16sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
         android:text="@string/average_duration"
+        android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_routine_name" />
 
@@ -109,7 +109,7 @@
         android:layout_marginTop="4dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="24dp"
-        app:layout_constraintBottom_toTopOf="@+id/btn_finish"
+        app:layout_constraintBottom_toTopOf="@+id/btn_start"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_description">
@@ -119,7 +119,7 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/tv_description_book"
+                android:id="@+id/tv_description_exercise"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=""
@@ -128,19 +128,22 @@
     </ScrollView>
 
     <TextView
-        android:id="@+id/tv_description_exercise"
+        android:id="@+id/tv_description"
+        style="@style/textStyleMedium"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
-        android:text=""
-        android:textColor="@color/grey"
+        android:text="@string/description"
+        android:textColor="@color/black"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/tv_description"
-        app:layout_constraintTop_toBottomOf="@+id/tv_description" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_pages_book" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_finish"
+        android:id="@+id/btn_start"
         style="@style/buttonTextStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
