--- a/app/src/main/res/layout/activity_fill_book_pref.xml
+++ b/app/src/main/res/layout/activity_fill_book_pref.xml
@@ -88,6 +88,7 @@
         android:hint="@string/favorite_book_category"
         android:inputType="text"
         android:padding="16dp"
+        android:textSize="14sp"
         android:textColorHint="@color/grey"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -107,6 +108,7 @@
         android:hint="@string/name_you_favorite_book"
         android:inputType="text"
         android:padding="16dp"
+        android:textSize="14sp"
         android:textColorHint="@color/grey"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -126,6 +128,7 @@
         android:ems="10"
         android:hint="@string/fav_author"
         android:inputType="text"
+        android:textSize="14sp"
         android:padding="16dp"
         android:textColorHint="@color/grey"
         app:layout_constraintEnd_toEndOf="parent"
@@ -133,7 +136,7 @@
         app:layout_constraintTop_toBottomOf="@+id/ed_birth" />
 
     <Button
-        android:id="@+id/btn_login"
+        android:id="@+id/btn_next"
         style="@style/buttonTextStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
