fix: detail routine :rocket:

--- a/app/src/main/res/layout/activity_detail_book.xml
+++ b/app/src/main/res/layout/activity_detail_book.xml
@@ -189,7 +189,7 @@
     </ScrollView>
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_finish"
+        android:id="@+id/btn_start"
         style="@style/buttonTextStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
