add: search routines :rockete:

--- a/app/src/main/res/layout/activity_detail_exercise.xml
+++ b/app/src/main/res/layout/activity_detail_exercise.xml
@@ -140,7 +140,7 @@
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_pages_book" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_duration_exercise" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_start"
