--- a/app/src/main/res/layout/activity_pick_routine.xml
+++ b/app/src/main/res/layout/activity_pick_routine.xml
@@ -29,27 +29,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/back_btn_pick_routine" />
 
-    <EditText
-        android:id="@+id/ed_search_pick_routine"
-        style="@style/textStyleMedium"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="24dp"
-        android:background="@drawable/custom_text_field_bg"
-        android:drawableStart="@drawable/custom_search_icon"
-        android:drawablePadding="12dp"
-        android:textSize="14sp"
-        android:ems="10"
-        android:hint="@string/search"
-        android:inputType="textEmailAddress"
-        android:padding="16dp"
-        android:textColorHint="@color/grey"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tabs"
-        android:importantForAutofill="no" />
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabs"
@@ -75,30 +54,12 @@
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/btn_choose"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ed_search_pick_routine" />
-
-    <Button
-        android:id="@+id/btn_choose"
-        style="@style/buttonTextStyle"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="32dp"
-        android:background="@drawable/custom_rounded_btn_bg"
-        android:elevation="0dp"
-        android:padding="6dp"
-        android:text="@string/choose"
-        android:textSize="20sp"
+        android:layout_marginTop="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tabs"
+        app:layout_constraintVertical_bias="0.0" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
